// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointerBox applies the background color via "bg" prop for backwards compatibility 1`] = `
.c0 {
  background-color: var(--borderColor-danger-emphasis,var(--color-danger-emphasis,#cf222e));
  border-width: 1px;
  border-style: solid;
  border-color: var(--borderColor-default,var(--color-border-default,#d0d7de));
  border-radius: 6px;
  --custom-bg: var(--borderColor-danger-emphasis,var(--color-danger-emphasis,#cf222e));
  background-image: linear-gradient(var(--custom-bg),var(--custom-bg)),linear-gradient(var(--bgColor-default,var(--color-canvas-default,#ffffff)),var(--bgColor-default,var(--color-canvas-default,#ffffff)));
  position: relative;
}

<div
  className="c0"
>
  <svg
    height={16}
    role="presentation"
    style={
      {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--borderColor-danger-emphasis, var(--color-danger-emphasis, #cf222e))"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
        strokeWidth="1px"
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox applies the background color via sx prop 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-color: var(--borderColor-default,var(--color-border-default,#d0d7de));
  border-radius: 6px;
  --custom-bg: var(--borderColor-danger-emphasis,var(--color-danger-emphasis,#cf222e));
  background-image: linear-gradient(var(--custom-bg),var(--custom-bg)),linear-gradient(var(--bgColor-default,var(--color-canvas-default,#ffffff)),var(--bgColor-default,var(--color-canvas-default,#ffffff)));
  position: relative;
}

<div
  className="c0"
>
  <svg
    height={16}
    role="presentation"
    style={
      {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--borderColor-danger-emphasis, var(--color-danger-emphasis, #cf222e))"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
        strokeWidth="1px"
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox applies the border color via "borderColor" prop for backwards compatibility 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-color: var(--borderColor-danger-emphasis,var(--color-danger-emphasis,#cf222e));
  border-radius: 6px;
  position: relative;
}

<div
  className="c0"
>
  <svg
    height={16}
    role="presentation"
    style={
      {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="var(--borderColor-danger-emphasis, var(--color-danger-emphasis, #cf222e))"
        strokeWidth="1px"
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox applies the border color via sx prop 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-color: var(--borderColor-default,var(--color-border-default,#d0d7de));
  border-radius: 6px;
  border-color: var(--borderColor-danger-emphasis,var(--color-danger-emphasis,#cf222e));
  position: relative;
}

<div
  className="c0"
>
  <svg
    height={16}
    role="presentation"
    style={
      {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="var(--borderColor-danger-emphasis, var(--color-danger-emphasis, #cf222e))"
        strokeWidth="1px"
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox renders a <Caret> in <Box> with relative positioning 1`] = `
.c0 {
  border-width: 1px;
  border-style: solid;
  border-color: var(--borderColor-default,var(--color-border-default,#d0d7de));
  border-radius: 6px;
  position: relative;
}

<div
  className="c0"
>
  <svg
    height={16}
    role="presentation"
    style={
      {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="var(--bgColor-default, var(--color-canvas-default, #ffffff))"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="var(--borderColor-default, var(--color-border-default, #d0d7de))"
        strokeWidth="1px"
      />
    </g>
  </svg>
</div>
`;
